# AutoFloorHeating

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  output.dxf
docs/: 暖通地暖设计需求-20240928 (1).docx
example/: HeatingDesign.json  PreDesignAC-样例01.json  PreDesignAC-样例02.json  inputData.json
include/: ar_design_structures.h  data_structures.h  heating_design_structures.h  helper.h  helper.hpp  input_data_structures.h  pipe_layout_generator.h  pipe_layout_generator.hpp  tree2pipe.hpp  visualization.hpp
include/core/export/: dwg_exporter.hpp
include/core/parsing/: input_parser.hpp  json_parser.hpp  output_parser.hpp  types.hpp
include/core/parsing/parser/: heating_design_parser.hpp
include/core/pipeline/: pipe_layout_generator.hpp
include/data/: data_structures.hpp  heating_design_structures.hpp  input_data_structures.hpp
include/parsers/: ar_design_parser.hpp  heating_design_parser.hpp  input_data_parser.hpp
include/types/: ar_design_structures.hpp  data_structures.hpp  heating_design_structures.hpp  input_data_structures.hpp
pypipeline/: .gitignore  HeatingDesign_output.json  README.md  requirements.txt  run.sh  test_cactus.sh
pypipeline/data/: ARDesign-min.json  ARDesign02.dxf  ARDesign02.json  inputData01.json  inputData02.json  inputData03.json  inputData04.json  inputData05.json  inputData06.json  test_data.py
pypipeline/output/: -1_polygon_group_0_intermediate.json  -1_polygon_group_1_intermediate.json  18_polygon_group_0_intermediate.json  18_polygon_group_210_intermediate.json  18_polygon_group_2_partition_input.json  1_polygon_group_0_intermediate.json  1_polygon_group_107_intermediate.json  1_polygon_group_14_intermediate.json  1_polygon_group_16_intermediate.json  1_polygon_group_1_intermediate.json  1_polygon_group_2_intermediate.json  1_polygon_group_348_intermediate.json  1_polygon_group_3_intermediate.json  1_polygon_group_4_intermediate.json  1_polygon_group_95_intermediate.json  2_polygon_group_0_intermediate.json  2_polygon_group_14_intermediate.json  2_polygon_group_16_intermediate.json  2_polygon_group_1_partition_input.json  2_polygon_group_216_intermediate.json  2_polygon_group_2_partition_input.json  2_polygon_group_374_intermediate.json  2_polygon_group_3_partition_input.json  3_polygon_group_0_intermediate.json  3_polygon_group_0_partition_input.json  3_polygon_group_214_intermediate.json  3_polygon_group_2_partition_input.json  3~34_polygon_group_14_intermediate.json  3~34_polygon_group_16_intermediate.json  3~34_polygon_group_374_intermediate.json  4_polygon_group_0_intermediate.json  4_polygon_group_0_partition_input.json  4_polygon_group_1_partition_input.json  4_polygon_group_214_intermediate.json  4_polygon_group_3_partition_input.json  5~17_polygon_group_0_intermediate.json  5~17_polygon_group_0_partition_input.json  5~17_polygon_group_214_intermediate.json  5~17_polygon_group_2_partition_input.json  HeatingDesign_1.dxf  (+52 more)
pypipeline/output/cases/: case0_intermediate.json  case10_intermediate.json  case11_intermediate.json  case1_intermediate.json  case2_intermediate.json  case3_intermediate.json  case4_intermediate.json  case5_intermediate.json  case6_intermediate.json  case7_intermediate.json  case8_intermediate.json  case9_intermediate.json  case_p1_intermediate.json  case_p2_intermediate.json  case_p3_intermediate.json
pypipeline/src/: cactus copy.py  cactus.py  cactus2.py  cactus3.py  cactus4.py  cactus_batch_solver.py  cactus_data.py  cactus_solver.py  convert_to_heating_design.py  debug_partition.py  dxf_export.py  main.py  partition.py  pipeline_solver.py  plot_pipe_data.py  visualization_data.py
pypipeline/src/cactus_data/: case0.py  case1.py  case2.py  case9.py
pypipeline/src/core/: cactus.py  cactus_solver_tmp.py  parse_json.py  partition.py  plane.py  shapely_spiral.py  tmp.json  tmp2.json  utils.py
pypipeline/src/pipeline/: cactus_solver.py  convert_to_heating_design.py  plot_pipe_data.py
pypipeline/src/tools/: case_converter.py  dxf_export.py  visualization_data.py
scripts/: build.sh
src/: helper.cpp  json_parser.cpp  main.cpp  pipe_layout_generator.cpp  tree2pipe.cpp  visualization.cpp
src/core/export/: dwg_exporter.cpp
src/core/parseing/: input_parser.cpp  json_parser.cpp  output_parser.cpp
src/core/parseing/parser/: heating_design_parser.cpp  input_data_parser.cpp
src/core/parsing/: output_parser.cpp
src/core/parsing/parser/: ar_design_parser.cpp  heating_design_parser.cpp  input_data_parser.cpp
src/core/pipeline/: pipe_layout_generator.cpp
src/parsers/: ar_design_parser.cpp  heating_design_parser.cpp  input_data_parser.cpp
src/partition/: partition.py
src/visualization/: visualization.cpp
tests/: CMakeLists.txt  README.md  partition.py  partition_data.py  test_dwg_exporter.cpp  test_helper.cpp  test_main.cpp  test_pipe_layout_generator.cpp  test_sample.cpp  test_tree2pipe.cpp  tree_to_pipe.ipynb
tests/segmentation/: README.md  cactus-case0.ipynb  cactus-case1.ipynb  cactus-case2.ipynb  cactus-case3.ipynb  cactus-case4.ipynb  cactus-case4.py  cactus-v0.ipynb  cactus.ipynb  cactus.py  cactus_test.ipynb  parse_json.py  parse_polygon_data.py  plane.py  requirements.txt  seg.ipynb  shapely_spiral.py  utils.py
tests/segmentation/cactus_data/: case10.py  case11.py  case3.py  case4.py  case5.py  case6.py  case7.py  case8.py  case_p1.py  case_p2.py  case_p3.py
tests/test_data/: basic_heating_design.json  complex_heating_design.json  empty_heating_design.json
tests/tree2pipe/: CMakeLists.txt  tree2pipe.cpp
